CON-31 | Fixed z-index of slider arrows for mobile menu.

--- a/web/themes/custom/consulo_theme/sass/5.components/_components.sliders.scss
+++ b/web/themes/custom/consulo_theme/sass/5.components/_components.sliders.scss
@@ -19,7 +19,7 @@
     background-color: transparent;
     position: absolute;
     top: 15.5rem;
-    z-index: 999;
+    z-index: 99;
 
     @include breakpoint(smallmedium) {
       top: 37vh;
